[metadata]
name = ge_lib
version = attr: ge_lib.version.__version__
author = Simon Thomson
author_email = simon.thomson@aecom.com
url = https://github.com/simon969/ge_lib
description = Python code library for ground engineering
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geotechnical, 
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src

packages = find:

# packages = ge_lib.ags
#           ge_lib.ags.rules
#           ge_lib.found
#           ge_lib.found.pyFooting
#           ge_lib.general
#           ge_lib.motions
#           ge_lib.plaxis
#           ge_lib.tunnel

zip_safe = True

include_package_data = True

install_requires =
    importlib-metadata
    packaging
    pypyodbc
    pandas
    numpy
    python-AGS4
    tomli
    zipp
    ipykernel
    dict2xml
    pycryptodome
    chardet
    matplotlib
    urllib3
    requests

python_requires = >=3.11

[options.packages.find]
where = src
include = ge_lib*
# alternatively: `exclude = additional*`