[metadata]
name = ge_lib
version = attr: ge_lib.version.__version__
author = Simon Thomson
author_email = simon.thomson@aecom.com
url = https://github.com/simon969/ge_lib
description = Python code library for ground engineering
long_description = file: README.md
long_description_content_type = text/markdown
keywords = geotechnical, 
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir = 
    =src
include_package_data = True
packages = find:

zip_safe = True

install_requires =
    importlib-metadata
    packaging
    pypyodbc
    pandas
    numpy
    python-AGS4
    tomli
    zipp
    ipykernel
    dict2xml
    pycryptodome
    chardet
    matplotlib
    urllib3
    requests
    jsonschema

python_requires = >=3.11

[options.packages.find]
exclude = *.tests*
include = ge_lib*

[options.package_data]
* = *schemas*.json